# SilenceEvolution

./: .gitignore  Cargo.toml  README.md  build.rs  dist-workspace.toml  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.cargo/: config.toml
.github/: pull_frontend.yml  pull_frontend_tools.yml  setup_build.yml
.github/workflows/: build_release.yml  release.yml  trigger_release.yml
frontend/: index.html  main.tsx
frontend/admin/: Admin.tsx  App.tsx  AppCx.tsx  Config.tsx  Endpoint.tsx  Endpoints.tsx  ManageEndpoint.tsx  ManageUser.tsx  Session.tsx  Settings.tsx  TestEndpoint.tsx  User.tsx  Users.tsx  index.html  main.tsx
frontend/admin/Components/: AlertContainer.tsx  Button.tsx  Console.tsx  Modal.tsx
frontend/admin/components/: AlertContainer.tsx  Console.tsx  List.tsx  Modal.tsx  SearchButton.tsx
frontend/admin/endpoints/: List.tsx  Modify.tsx  Test.tsx  index.tsx
frontend/admin/tests/: List.tsx  Test.tsx  index.tsx
frontend/admin/users/: List.tsx  Modify.tsx  index.tsx
frontend/auth/: Auth.tsx  Login.tsx  Signup.tsx  index.html  main.tsx
frontend/panel/: index.html
frontend/styles/: tailwind.css
migrations/: internal.sql  new_project.sql
src/: app_cx.rs  config.rs  endpoint_test.rs  lib.rs  main.rs  new.rs  panel.rs  simple_endpoint.rs  static_service.rs
src/endpoint/: internal.rs  mod.rs
src/endpoint/internal/: endpoint.rs  mod.rs
src/internal_endpoints/: console.rs  manage_endpoints.rs  mod.rs  mysql_proxy.rs
src/internal_endpoints/admin/: config.rs  endpoints.rs  mod.rs  tests.rs
